fixed layout bug

--- a/app/assets/stylesheets/partials/_tables.scss
+++ b/app/assets/stylesheets/partials/_tables.scss
@@ -4,13 +4,21 @@
     tr {
       th {
         white-space: nowrap;
+      }
+
+      th.text-right {
         padding-right: 20px;
       }
+
     }
   }
 
   tbody {
     tr {
+      td.text-right {
+        padding-right: 20px;
+      }
+
       td.action-icons {
         a {
           margin-right: 15px;
